# swift-esp32c6-examples

./: .gitignore  LICENSE  README.md
01_hello_world/: README.md
01_hello_world/main/: BridgingHeader.h  CMakeLists.txt  Main.swift
02_blink/: README.md
02_blink/main/: BridgingHeader.h  ChipInformation.swift  Main.swift
03_blink_colors/: README.md
03_blink_colors/main/: BridgingHeader.h  Led.swift  Main.swift
04_temperature/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  TemperatureReader.swift
05_wifi_scan/: README.md
05_wifi_scan/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  WIFIAccessPointRecord.swift  WIFIScanner.swift
06_wifi_fast_scan/: README.md
06_wifi_fast_scan/main/: BridgingHeader.h  ChipInformation.swift  Main.swift  WIFIAccessPointRecord.swift  WIFIScanner.swift
07_logging_errors/: README.md
07_logging_errors/main/: BridgingHeader.h  CMakeLists.txt  Logger.swift  Main.swift  Utilities.swift
08_swift_package_manager/: .gitignore
08_swift_package_manager/main/: CMakeLists.txt  Package.swift
08_swift_package_manager/main/Source/App/: App.swift
09_spm_template/.sourcekit-lsp/: config.json
09_spm_template/main/: CMakeLists.txt  Package.swift
09_spm_template/main/Source/App/: App.swift
09_spm_template/main/Source/Logging/: Logger.swift
09_spm_template/main/Source/Support/include/: logger.h
blink/main/: CMakeLists.txt  Led.swift
